2005-07-27  Manish Singh  <yosh@gimp.org>

	* app/core/gimpdrawable-foreground-extract.c: #include
	gimpimage-colormap.h

2005-07-28  Sven Neumann  <sven@gimp.org>

	* app/core/Makefile.am
	* app/core/cpercep.[ch]: moved cpercep from here ...
	
	* app/base/Makefile.am
	* app/base/cpercep.[ch]: ... to here.

	* app/base/siox.[ch]: use the cpercep routines for RGB->LAB
	conversion, gives a 20% speedup. Removed normalization which seems
	redundant. Make it work for grayscale and indexed, not only RGB.

	* app/core/gimpdrawable-foreground-extract.c
	* app/core/gimpimage-convert.c: changed accordingly.

2005-07-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/ifscompose/ifscompose.c: change the cursor with the tool
	(bug #90519).

2005-07-26  Sven Neumann  <sven@gimp.org>

	* tools/gimp-remote.c: fixed signedness warnings.

2005-07-25  Maurits Rijk  <m.rijk@chello.nl>

	* plug-ins/imagemap/imap_csim.y: make buffer large enough to hold
	all polygon data.

	* plug-ins/imagemap/imap_csim_parse.[ch]: regenerated. Fixes #169698

2005-07-25  Michael Natterer  <mitch@gimp.org>

	Some DND fixes / cleanup:

	* app/widgets/widgets-enums.h: renamed GIMP_DND_TYPE_TOOL to
	GIMP_DND_TYPE_TOOL_INFO.

	* app/widgets/gimpselectiondata.[ch]: s/tool/tool_info/g. Moved
	private functions to the end of the file. Include GIMP's PID in
	all GtkSelectionData strings which are used to pass around stuff
	by reference. For things which are referenced by name, also encode
	the object's address in the GtkSelectionData so having a brush
	called "Standard" or a named buffer called "Global Buffer" will
	work together with DND.

	* app/widgets/gimpdnd.[ch]: s/tool/tool_info/g. Renamed
	gimp_dnd_get_data_data() to gimp_dnd_get_object_data() since it's
	not limited to GimpData objects. Follow above selection data API
	changes. Cleanup.

	* libgimp/gimpbrushmenu.c
	* libgimp/gimpdrawablecombobox.c
	* libgimp/gimpfontselectbutton.c
	* libgimp/gimpgradientmenu.c
	* libgimp/gimpimagecombobox.c